--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = locallibrary.settings
 python_files = tests.py test_*.py *_tests.py
+# addopts = --cov --cov-report=html
