--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,31 @@
+appdirs==1.4.4
 asgiref==3.2.7
+atomicwrites==1.4.0
+attrs==19.3.0
+black==19.10b0
+click==7.1.2
+colorama==0.4.3
+coverage==5.2.1
 dj-database-url==0.5.0
 Django==3.0.7
-gunicorn==20.0.4
 django-crispy-forms==1.9.1
+djangorestframework==3.11.0
+Faker==0.9.1
+gunicorn==20.0.4
+iniconfig==1.0.0
+more-itertools==8.4.0
+packaging==20.4
+pathspec==0.8.0
+pluggy==0.13.1
 psycopg2==2.8.5
+py==1.9.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2019.3
+regex==2020.7.14
+six==1.15.0
 sqlparse==0.3.1
+text-unidecode==1.2
+toml==0.10.1
+typed-ast==1.4.1
 whitenoise==5.1.0
