--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,20 @@
-appdirs==1.4.4
-asgiref==3.2.7
-atomicwrites==1.4.0
-attrs==19.3.0
-black==19.10b0
-click==7.1.2
-colorama==0.4.3
-coverage==5.2.1
-dj-database-url==0.5.0
-Django==3.1.13
-django-crispy-forms==1.9.1
-djangorestframework==3.11.0
-Faker==0.9.1
-gunicorn==20.0.4
-iniconfig==1.0.0
-more-itertools==8.4.0
-packaging==20.4
-pathspec==0.8.0
-pluggy==0.13.1
-psycopg2==2.8.5
-py==1.9.0
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2019.3
-regex==2020.7.14
-six==1.15.0
-sqlparse==0.3.1
+asgiref==3.6.0
+autopep8==2.0.2
+coverage==7.2.4
+crispy-bootstrap4==2022.1
+dj-database-url==2.0.0
+Django==4.2
+django-crispy-forms==2.0
+djangorestframework==3.14.0
+Faker==18.6.0
+psycopg2==2.9.6
+pycodestyle==2.10.0
+python-dateutil==2.8.2
+pytz==2023.3
+six==1.16.0
+sqlparse==0.4.4
 text-unidecode==1.2
 toml==0.10.1
-typed-ast==1.4.1
-whitenoise==5.1.0
+typing_extensions==4.5.0
+tzdata==2023.3
+whitenoise==6.4.0
