--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = locallibrary.settings
+DJANGO_SETTINGS_MODULE = locallibrary.settings.dev
 python_files = tests.py test_*.py *_tests.py
 # addopts = --cov --cov-report=html
